# sherry-pallet

./: Cargo.toml
pallets/cherry-pallet/: Cargo.toml
pallets/cherry-pallet/src/: lib.rs
